--- a/client/src/component/Header/header.css
+++ b/client/src/component/Header/header.css
@@ -53,13 +53,31 @@
 
 .user-menu {
   position: relative;
+  display: inline-block;
 }
 
 .username {
   cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.username .dropdown-icon {
+  margin-left: 5px;
+  font-size: 12px;
+  transition: transform 0.2s;
+}
+
+.username:hover .dropdown-icon {
+  transform: rotate(180deg);
+}
+
+.user-menu:hover .dropdown-menu {
+  display: block;
 }
 
 .dropdown-menu {
+  display: none;
   position: absolute;
   top: 100%;
   left: 0;
@@ -68,6 +86,8 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   z-index: 1050;
   white-space: nowrap;
+  width: 200px; /* 메뉴 너비 고정 */
+  overflow: hidden; /* 메뉴 너비를 벗어나는 내용 숨기기 */
 }
 
 .dropdown-menu a,
@@ -81,6 +101,7 @@
   text-align: left;
   cursor: pointer;
   width: 100%;
+  box-sizing: border-box; /* 패딩을 포함하여 너비 계산 */
 }
 
 .dropdown-menu a:hover,
