--- a/client/src/pages/notice/AdminNotice.css
+++ b/client/src/pages/notice/AdminNotice.css
@@ -12,6 +12,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     background-color: #ffffff;
+    height: 90%;
 
 }
 
@@ -50,3 +51,14 @@
 .notice-table tr:hover {
     background-color: #f1f1f1;
 }
+.notice-table-box {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    overflow-y: auto;
+    /* box-shadow: 0 0 0 0.5px var(--c-black); */
+    background-color: var(--c-lightgray);
+  }
+  
