--- a/client/src/pages/admin/adminSidebar/adminSidebar.css
+++ b/client/src/pages/admin/adminSidebar/adminSidebar.css
@@ -30,28 +30,26 @@
 /* 사이드바 로고 */
 .sidebar-logo-box {
   width: 100%;
+  height: 100px;
   display: flex;
   font-size: 30px;
   font-weight: 600;
-  margin-top: 20px;
+  /* border: 1px solid black; */
+  /* margin-top: 10px; */
   margin-bottom: 20px;
   justify-content: center;
   align-items: center;
   cursor: pointer;
 }
 
-.sidebar-logo-text {
+.sidebar-logo-image {
   display: flex;
-  color: var(--c-darkgray);
-  font-weight: bolder;
 }
 
-/* .sidebar-logo-icon {
-  display: flex;
-  margin-right: 16px;
-  font-weight: bolder;
-  color: var(--c-darkgray);
-} */
+.sidebar-logo {
+  width: 200px;
+  height: 120px;
+}
 
 /* 사이드바 메뉴 */
 .sidebar-hidden-text {
