--- a/client/src/component/Navbar/navbar.css
+++ b/client/src/component/Navbar/navbar.css
@@ -7,7 +7,8 @@ nav {
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   position: relative;
-  z-index: 5; /* 드롭다운 메뉴보다 낮게 설정 */
+  z-index: 5;
+  /* 드롭다운 메뉴보다 낮게 설정 */
 }
 
 /* 로고 스타일 */
@@ -17,6 +18,7 @@ nav .logo {
   text-transform: uppercase;
   color: #000000;
   text-decoration: none;
+  height: 55px;
 }
 
 /* 메뉴 항목 스타일 */
@@ -25,6 +27,11 @@ nav ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.navbar-image {
+  width: 150px;
+  height: 100%;
 }
 
 nav ul li {
@@ -48,7 +55,8 @@ nav ul li a:hover {
 nav ul li ul {
   display: none;
   position: absolute;
-  top: 30px; /* 상위 메뉴와 겹치지 않도록 위치 조정 */
+  top: 30px;
+  /* 상위 메뉴와 겹치지 않도록 위치 조정 */
   left: 0;
   background-color: #ffffff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -75,7 +83,8 @@ nav ul li ul li a:hover {
 /* 중분류 메뉴 호버 시 표시 */
 nav ul li:hover ul {
   display: block;
-  top: 30px; /* 부모 li의 하단 바로 아래에 표시되도록 */
+  top: 30px;
+  /* 부모 li의 하단 바로 아래에 표시되도록 */
 }
 
 /* 장바구니 스타일 */
@@ -92,7 +101,10 @@ nav .cart {
   margin-right: 5px;
 } */
 .cart img {
-  width: 30px; /* 원하는 너비로 조절 */
-  height: auto; /* 비율에 맞춰 자동으로 높이를 설정 */
-  max-height: 30px; /* 원하는 최대 높이 설정 */
+  width: 30px;
+  /* 원하는 너비로 조절 */
+  height: auto;
+  /* 비율에 맞춰 자동으로 높이를 설정 */
+  max-height: 30px;
+  /* 원하는 최대 높이 설정 */
 }
