--- a/client/src/pages/order/OrderCouponModal.css
+++ b/client/src/pages/order/OrderCouponModal.css
@@ -15,7 +15,7 @@
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    width: 400px;
+    width: 450px;
     max-width: 90%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -32,9 +32,11 @@
     cursor: pointer;
 }
 
-.order-coupon-close-button h2 {
+.order-coupon-close-button h3 {
     margin-bottom: 20px;
     text-align: center;
+    font-size: 20px;
+    border-bottom: 1px solid #888;
 }
 
 .order-coupon-list {
@@ -49,6 +51,7 @@
     align-items: center;
     padding: 10px;
     border-bottom: 1px solid #ddd;
+    font-size: 17px;
 }
 
 .order-coupon-list li span {
@@ -57,14 +60,15 @@
 }
 
 .order-coupon-list li button {
-    background-color: #4CAF50;
+    background-color: #ff5722;
     color: white;
     border: none;
-    padding: 5px 10px;
+    padding: 7px 15px;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 17px;
 }
 
 .order-coupon-list li button:hover {
-    background-color: #45a049;
+    background-color: #e64a19;
 }
