--- a/client/src/pages/customer/myqnalist.css
+++ b/client/src/pages/customer/myqnalist.css
@@ -5,11 +5,23 @@
   text-align: center;
   margin: 0 auto;
   max-width: 600px;
+  margin-top: 90px;
 }
 
 /* 기본 폰트는 검정 */
 body {
   color: black;
+}
+
+/* 제목 필드 */
+.qnaList-header {
+  font-size: 30px; /* 텍스트 크기 작게 설정 */
+  margin-bottom: 60px;
+}
+
+/* 문의 필드 공간 수정 */
+.qnaList-item {
+  margin-bottom: 20px; /* 문의 항목 간의 공간을 3배로 증가 */
 }
 
 /* 질문 리스트는 왼쪽 정렬로 문의 제목 출력 */
@@ -19,20 +31,22 @@ body {
   font-weight: bold;
   padding: 10px 0;
   border-bottom: 1px solid #ccc;
+  margin-top: 20px;
+  display: flex; /* 플렉스 박스 사용하여 정렬 */
+  justify-content: space-between; /* 양 끝으로 정렬 */
+}
+
+/* 리스트 끝에 문의한 날짜 출력 */
+.qnaList-date {
+  font-size: 1em; /* 제목과 같은 크기 */
+  color: gray;
+  font-weight: normal; /* 볼드체 사용 안 함 */
 }
 
 /* 질문과 답변 사이에 시각적으로 나누어지는 느낌을 위해 실선으로 표현 */
 .qnaList-hr {
   margin: 10px 0;
 }
-
-/* 답변의 컬러는 빨강 */
-.qnaList-answer {
-  color: rgb(241, 182, 33);
-  text-align: left;
-  padding: 10px 0;
-}
-
 
 /* 문의 내용 네모 상자 스타일 */
 .qnaList-content-box {
@@ -47,4 +61,16 @@ body {
   text-align: left;
 }
 
+/* 문의 내용과 답변 사이에 실선 추가 및 양쪽에 공간 주기 */
+.qnaList-divider {
+  border-bottom: 1px solid #ccc;
+  width: 95; /* 실선 길이를 줄임 */
+  margin: 10px auto; /* 실선을 가운데 정렬하고 양쪽에 공간 추가 */
+}
 
+/* 답변칸 */
+.qnaList-answer {
+  color: rgb(241, 182, 33);
+  text-align: left;
+  padding: 5px 0 0 0;
+}
