--- a/client/src/pages/order/Order.css
+++ b/client/src/pages/order/Order.css
@@ -30,9 +30,9 @@
 }
 
 .current-step {
-  background-color: #d1e7fd;
-  color: #007bff;
-  border: 2px solid #007bff;
+  background-color: #888;
+  color: white;
+  border: 2px solid #757575;
   border-radius: 5px;
   padding: 10px;
 }
@@ -63,6 +63,7 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  font-size: 17px;
 }
 
 .order-item img {
@@ -163,29 +164,21 @@ s
   margin-left: 10px;
   padding: 8px 14px;
   font-size: 18px;
-  background-color: #ff5722;
+  background-color: #757575;
   color: white;
   border: none;
   cursor: pointer;
-}
-
-.apply-coupon-button:hover {
-  background-color: #e64a19;
 }
 
 .next-button {
   margin-top: 20px;
   padding: 8px 14px;
   font-size: 18px;
-  background-color: #ff5722;
+  background-color: #757575;
   color: white;
   border: none;
   cursor: pointer;
 
-}
-
-.next-button:hover {
-  background-color: #e64a19;
 }
 
 .order-summary {
@@ -232,19 +225,10 @@ s
 .order-submit-button {
   width: 100%;
   padding: 10px 0;
-  background-color: #ff5722;
+  background-color: #757575;
   color: #fff;
   border: none;
   cursor: pointer;
   font-size: 1.1em;
 }
 
-.order-submit-button:hover {
-  background-color: #e64a19;
-}
-
-/* 수량 텍스트 오른쪽 정렬 */
-.order-items th:nth-child(3) {
-  text-align: right;
-  padding-right: 50px; /* 원하는 만큼 이동 */
-}
