--- a/client/src/pages/customer/myqna.css
+++ b/client/src/pages/customer/myqna.css
@@ -1,52 +1,68 @@
 /* 전체 폼 컨테이너 */
 .myqna-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f9f9f9;
-    padding: 20px; /* 화면 가장자리에 여백 추가 */
-  }
-  
-  /* 헤더 스타일 */
-  .myqna-header {
-    margin-bottom: 55px;
-    text-align: center; /* 헤더 중앙 정렬 */
-  }
-  
-  /* 폼 제목 스타일 */
-  .myqna-header h1 {
-    font-size: 23px; 
-    font-weight: normal;
-    margin-top: 60px; /* 위쪽 공간*/
-  }
-  
-  /* 폼 스타일 */
-  .myqna-contact-form {
-    display: flex;
-    flex-direction: column;
-    width: 650px; /* 폼 너비를 키움 */
-    padding: 20px;
-    border: 1px solid #ddd; /* 연한 그레이 색으로 변경 */
-    border-radius: 5px;
-    background-color: #fff;
-    text-align: left; /* 폼 내부 왼쪽 정렬 */
-    margin: 0 auto; /* 폼 중앙 정렬 */
-    height: 100; /* 폼 높이를 두 배로 설정 */    
-    box-sizing: border-box; /* padding 포함 높이 계산 */
-    flex-grow: 1; /* 폼의 높이가 최대한 차지하도록 설정 */
-  }
-  
-  /* 입력 그룹 행 스타일 */
-  .myqna-input-group-row {
-    display: flex;
-    margin-bottom: 20px;
-    align-items: center;
-    gap: 10px; /* 드롭다운 박스들 사이에 마진 추가 */
-  }
-  
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #f9f9f9;
+  padding: 20px;
+  /* 화면 가장자리에 여백 추가 */
+
+}
+
+.myqna-myqna-container {
+  margin-bottom: 100px;
+}
+
+/* 헤더 스타일 */
+.myqna-header {
+  margin-bottom: 55px;
+  text-align: center;
+  /* 헤더 중앙 정렬 */
+}
+
+/* 폼 제목 스타일 */
+.myqna-header h1 {
+  font-size: 23px;
+  font-weight: normal;
+  margin-top: 60px;
+  /* 위쪽 공간*/
+}
+
+/* 폼 스타일 */
+.myqna-contact-form {
+  display: flex;
+  flex-direction: column;
+  width: 650px;
+  /* 폼 너비를 키움 */
+  padding: 20px;
+  border: 1px solid #ddd;
+  /* 연한 그레이 색으로 변경 */
+  border-radius: 5px;
+  background-color: #fff;
+  text-align: left;
+  /* 폼 내부 왼쪽 정렬 */
+  margin: 0 auto;
+  /* 폼 중앙 정렬 */
+  height: 100;
+  /* 폼 높이를 두 배로 설정 */
+  box-sizing: border-box;
+  /* padding 포함 높이 계산 */
+  flex-grow: 1;
+  /* 폼의 높이가 최대한 차지하도록 설정 */
+}
+
+/* 입력 그룹 행 스타일 */
+.myqna-input-group-row {
+  display: flex;
+  margin-bottom: 20px;
+  align-items: center;
+  gap: 10px;
+  /* 드롭다운 박스들 사이에 마진 추가 */
+}
+
+
 /* 입력 필드 스타일 */
 .myqna-input-group {
   display: flex;
@@ -59,11 +75,13 @@
   flex: 1;
   text-align: left;
   margin-right: 10px;
-  color: #333; /* 색상 변경 */
-  font-size: 14px; /* 글씨 크기 변경 */
+  color: #333;
+  /* 색상 변경 */
+  font-size: 14px;
+  /* 글씨 크기 변경 */
 }
 
- /* 드롭다운 스타일 */ 
+/* 드롭다운 스타일 */
 .myqna-dropdown-container {
   position: relative;
   flex: 2;
@@ -75,7 +93,8 @@
 .myqna-dropdown {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ddd; /* 연한 그레이 색으로 변경 */
+  border: 1px solid #ddd;
+  /* 연한 그레이 색으로 변경 */
   border-radius: 5px;
   font-size: 14px;
   color: #999;
@@ -86,7 +105,7 @@
 }
 
 .myqna-dropdown:focus {
-  outline: none; 
+  outline: none;
   border-color: #007BFF;
 }
 
@@ -95,15 +114,18 @@
   display: flex;
   align-items: center;
   margin-bottom: 20px;
-  position: relative; /* 글자 수 제한을 포함시키기 위해 추가 */
+  position: relative;
+  /* 글자 수 제한을 포함시키기 위해 추가 */
 }
 
 .myqna-input-label {
   flex: 1;
   text-align: left;
   margin-right: 10px;
-  color: #333; /* 색상 변경 */
-  font-size: 14px; /* 글씨 크기 변경 */
+  color: #333;
+  /* 색상 변경 */
+  font-size: 14px;
+  /* 글씨 크기 변경 */
 }
 
 .myqna-input-box {
@@ -111,7 +133,8 @@
   text-align: right;
   width: 100%;
   padding: 10px;
-  border: 1px solid #ddd; /* 연한 그레이 색으로 변경 */
+  border: 1px solid #ddd;
+  /* 연한 그레이 색으로 변경 */
   border-radius: 5px;
   font-size: 14px;
   color: #333;
@@ -121,15 +144,20 @@
 .myqna-textarea-box {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ddd; /* 연한 그레이 색으로 변경 */
+  border: 1px solid #ddd;
+  /* 연한 그레이 색으로 변경 */
   border-radius: 5px;
   font-size: 14px;
   color: #333;
-  height: 150px; /* 필드 높이를 3배로 늘림 */
-  text-align: left; /* 왼쪽 정렬 */
+  height: 150px;
+  /* 필드 높이를 3배로 늘림 */
+  text-align: left;
+  /* 왼쪽 정렬 */
   position: relative;
-  box-sizing: border-box; /* padding 포함 높이 계산 */
-  flex-grow: 1; /* 텍스트 영역이 균등하게 확장되도록 설정 */
+  box-sizing: border-box;
+  /* padding 포함 높이 계산 */
+  flex-grow: 1;
+  /* 텍스트 영역이 균등하게 확장되도록 설정 */
 }
 
 /* 글자 수 제한 표시 스타일 */
@@ -144,96 +172,110 @@
 
 /* 문의 내용 입력 필드 스타일 */
 .content-field .myqna-textarea-box::placeholder {
-  text-align: left; /* 플레이스홀더 텍스트 왼쪽 정렬 */
-  color: #999; /* 플레이스홀더 텍스트 색상 */
+  text-align: left;
+  /* 플레이스홀더 텍스트 왼쪽 정렬 */
+  color: #999;
+  /* 플레이스홀더 텍스트 색상 */
 }
 
-  /* 입력 필드 플레이스홀더 스타일 */
-  .myqna-contact-form input::placeholder,
-  .myqna-contact-form textarea::placeholder {
-    color: #999;
-    text-align: right;
-  }
+/* 입력 필드 플레이스홀더 스타일 */
+.myqna-contact-form input::placeholder,
+.myqna-contact-form textarea::placeholder {
+  color: #999;
+  text-align: right;
+}
 
-  
-  /* 체크박스 필드 스타일 */
-  .myqna-checkbox-field {
-    display: flex;
-    align-items: center;
-    margin-top: 10px; /* 연락처 아래로 이동 */
-    margin-bottom: 20px;
-  }
-  
-  .myqna-checkbox-field label {
-    margin-left: 5px;
-    font-size: 14px; /* 연락처와 같은 크기 */
-    color: #333; /* 연락처와 같은 색상 */
-    font-weight: normal; /* 연락처와 같은 두께 */
-  }
-  
-  /* 제출 버튼 스타일 */
-  .myqna-button-row {
-    display: flex;
-    justify-content: space-between; /* 버튼을 같은 가로 선상에 배치 */  
-  }
 
-  .myqna-submit-button {
-    padding: 10px;
-    background-color: #757575;
-    color: white;
-    border: none; 
-    cursor: pointer;
-    width: 11%;
-    text-align: center;
-    margin-right: 1px;
-    height: 36px; /* 동일한 높이 설정 */
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-  }
-  
-  .myqna-view-button {
-    padding: 10px;
-    background-color: #fff;
-    color: black;
-    border: 1px solid #ddd;
-    cursor: pointer;
-    width: 22%;
-    text-align: center;
-    height: 36px;   /*동일한 높이 설정  */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: 395px;
-  } 
+/* 체크박스 필드 스타일 */
+.myqna-checkbox-field {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  /* 연락처 아래로 이동 */
+  margin-bottom: 20px;
+}
 
-  /* 제출 버튼 호버 스타일 */
-  .myqna-submit-button:hover,
-  .myqna-view-button:hover {
+.myqna-checkbox-field label {
+  margin-left: 5px;
+  font-size: 14px;
+  /* 연락처와 같은 크기 */
+  color: #333;
+  /* 연락처와 같은 색상 */
+  font-weight: normal;
+  /* 연락처와 같은 두께 */
+}
+
+/* 제출 버튼 스타일 */
+.myqna-button-row {
+  display: flex;
+  justify-content: space-between;
+  /* 버튼을 같은 가로 선상에 배치 */
+}
+
+.myqna-submit-button {
+  padding: 10px;
+  background-color: #757575;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 11%;
+  text-align: center;
+  margin-right: 1px;
+  height: 36px;
+  /* 동일한 높이 설정 */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.myqna-view-button {
+  padding: 10px;
+  background-color: #fff;
+  color: black;
+  border: 1px solid #ddd;
+  cursor: pointer;
+  width: 22%;
+  text-align: center;
+  height: 36px;
+  /*동일한 높이 설정  */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: 395px;
+}
+
+/* 제출 버튼 호버 스타일 */
+.myqna-submit-button:hover,
+.myqna-view-button:hover {
   opacity: 0.9;
 }
-  /* 필드 제목 빨간색 스타일 */
-  .myqna-required {
-    color: red;
-  }
 
-  /* 중앙 정렬 텍스트 스타일 */
+/* 필드 제목 빨간색 스타일 */
+.myqna-required {
+  color: red;
+}
+
+/* 중앙 정렬 텍스트 스타일 */
 .myqna-center-text {
   text-align: center;
   margin-top: 20px;
-  color: #000; /* 색상 변경 */
+  color: #000;
+  /* 색상 변경 */
   font-size: 14px;
 }
 
 /* 하이라이트 텍스트 색상 스타일 */
 .highlight {
-  color: #b6a25a; /* 이미지에서 추출한 색상 값 */
+  color: #b6a25a;
+  /* 이미지에서 추출한 색상 값 */
 }
 
 /* 왼쪽 정렬 텍스트 스타일 */
 .myqna-left-text {
   text-align: left;
   margin-top: 20px;
-  color: #333; /* 색상 변경 */
-  font-size: 12px; /* 글자 크기 변경 */
+  color: #333;
+  /* 색상 변경 */
+  font-size: 12px;
+  /* 글자 크기 변경 */
 }
