--- a/client/src/pages/notice/AdminNotice.css
+++ b/client/src/pages/notice/AdminNotice.css
@@ -1,4 +1,4 @@
-.noticebody {
+.Admin-noticebody {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
     margin: 0;
@@ -16,42 +16,42 @@
 
 }
 
-.notice{
+.Admin-notice{
     text-align: center;
     margin-bottom: 20px;
     color: #333;
 }
 
-.notice-table {
+.Admin-notice-table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 20px;
 }
 
-.notice-table thead {
+.Admin-notice-table thead {
     background-color: #f1f1f1;
 }
 
-.notice-table th, .notice-table td {
+.Admin-notice-table th, .Admin-notice-table td {
     border: 1px solid #000000;
     padding: 12px;
     text-align: left;
 }
 
-.notice-table th {
+.Admin-notice-table th {
     font-weight: bold;
     background-color: var(--c-darkgray);
     color: var(--c-bg-white);
 }
 
-.notice-table td {
+.Admin-notice-table td {
     color: #333;
 }
 
-.notice-table tr:hover {
+.Admin-notice-table tr:hover {
     background-color: #f1f1f1;
 }
-.notice-table-box {
+.Admin-notice-table-box {
     margin: 0;
     padding: 0;
     display: flex;
