--- a/client/src/pages/order/OrderCouponModal.css
+++ b/client/src/pages/order/OrderCouponModal.css
@@ -15,7 +15,7 @@
     background-color: white;
     padding: 20px;
     border-radius: 10px;
-    width: 450px;
+    width: 500px;
     max-width: 90%;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     position: relative;
@@ -60,7 +60,7 @@
 }
 
 .order-coupon-list li button {
-    background-color: #ff5722;
+    background-color: #757575;
     color: white;
     border: none;
     padding: 7px 15px;
@@ -69,6 +69,3 @@
     font-size: 17px;
 }
 
-.order-coupon-list li button:hover {
-    background-color: #e64a19;
-}
